add glog to add log

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,11 +38,17 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
 find_package(Boost REQUIRED)
+find_package(glog 0.3.5 REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 set(cur_dir "./include")
 include_directories(${cur_dir})
+set(third_dir "./third-lib")
+include_directories(${third-lib})
+set(glog_dir "./third-lib/glog")
+include_directories(${glog_dir})
 
 add_subdirectory(third-lib/coroutine)
+#add_subdirectory(third-lib/glog)
 add_subdirectory(include)
 add_subdirectory(src/net)
 add_subdirectory(src/lock_free)
