--- a/src/net/CMakeLists.txt
+++ b/src/net/CMakeLists.txt
@@ -1,11 +1,12 @@
 file(GLOB SRCS "*.cpp")
 #set(SRCS SRC)
 
+find_package(glog 0.3.5 REQUIRED)
 add_library(reactor ${SRCS})
-target_link_libraries(reactor pthread coroutine)
+target_link_libraries(reactor pthread coroutine glog::glog)
 
 add_library(reactor11 ${SRCS})
-target_link_libraries(reactor11 pthread coroutine)
+target_link_libraries(reactor11 pthread coroutine glog::glog)
 set_target_properties(reactor11 PROPERTIES COMPILE_FLAGS "-std=c++0x")
 
 install(TARGETS reactor DESTINATION lib)
