--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,3 +10,7 @@ set(queue
 add_executable(lock_free_queue ${queue})
 target_link_libraries(lock_free_queue lockfree11)
 set_target_properties(lock_free_queue PROPERTIES COMPILE_FLAGS "-std=c++0x")
+
+set(glog_src glog.cpp)
+add_executable(glog_test ${glog_src})
+target_link_libraries(glog_test glog::glog)
