--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
 find_package(Boost REQUIRED)
 find_package(glog 0.3.5 REQUIRED)
+find_package(gflags REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 set(cur_dir "./include")
 include_directories(${cur_dir})
@@ -46,6 +47,8 @@ set(third_dir "./third-lib")
 include_directories(${third-lib})
 set(glog_dir "./third-lib/glog")
 include_directories(${glog_dir})
+set(gflags "./third-lib/gflags/build/include")
+include_directories(${gflags})
 
 add_subdirectory(third-lib/coroutine)
 #add_subdirectory(third-lib/glog)
