--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,3 +14,7 @@ set_target_properties(lock_free_queue PROPERTIES COMPILE_FLAGS "-std=c++0x")
 set(glog_src glog.cpp)
 add_executable(glog_test ${glog_src})
 target_link_libraries(glog_test glog::glog)
+
+set(gflags_src gflags.cpp gflags_declare_flags.cc)
+add_executable(gflags_test ${gflags_src})
+target_link_libraries(gflags_test gflags)
