fix compile bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,8 +49,9 @@ set(glog_dir "./third-lib/glog")
 include_directories(${glog_dir})
 set(gflags "./third-lib/gflags/build/include")
 include_directories(${gflags})
-
-add_subdirectory(third-lib/coroutine)
+set(coroutine "./third-lib/coroutine")
+include_directories(${coroutine})
+#add_subdirectory(third-lib/coroutine)
 #add_subdirectory(third-lib/glog)
 add_subdirectory(include)
 add_subdirectory(src/net)
