update cmake list

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,9 +51,10 @@ set(gflags "./third-lib/gflags/build/include")
 include_directories(${gflags})
 set(coroutine "./third-lib/coroutine")
 include_directories(${coroutine})
-#add_subdirectory(third-lib/coroutine)
+add_subdirectory(third-lib/coroutine)
 #add_subdirectory(third-lib/glog)
 add_subdirectory(include)
 add_subdirectory(src/net)
 add_subdirectory(src/lock_free)
 add_subdirectory(test)
+
