adjust file path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,9 +51,12 @@ set(gflags "./third-lib/gflags/build/include")
 include_directories(${gflags})
 set(coroutine "./third-lib/coroutine")
 include_directories(${coroutine})
+set(proto "./proto")
+include_directories(${proto})
 add_subdirectory(third-lib/coroutine)
 #add_subdirectory(third-lib/glog)
-add_subdirectory(include)
+#add_subdirectory(include)
+add_subdirectory(proto)
 add_subdirectory(src/net)
 add_subdirectory(src/lock_free)
 add_subdirectory(test)
