--- a/include/net/CMakeLists.txt
+++ b/include/net/CMakeLists.txt
@@ -1,2 +1,4 @@
 file(GLOB HEADERS "*.h")
 install(FILES ${HEADERS} DESTINATION include/net/)
+file(GLOB HEADERS_POLICY "policy/*.h")
+install(FILES ${HEADERS_POLICY} DESTINATION include/)
