update cmake list

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,7 @@ include_directories(${coroutine})
 set(proto "./proto")
 include_directories(${proto})
 add_subdirectory(third-lib/coroutine)
-#add_subdirectory(third-lib/glog)
+add_subdirectory(third-lib/glog)
 #add_subdirectory(include)
 add_subdirectory(proto)
 add_subdirectory(src/net)
