fix all compile bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ if(CMAKE_BUILD_BITS EQUAL 32)
 endif()
 string(REPLACE ";" " " CMAKE_CXX_FLAGS "${CXX_FLAGS}")
 
+set(CMAKE_C_COMPILER "g++")
 set(CMAKE_CXX_COMPILER "g++")
 set(CMAKE_CXX_FLAGS_DEBUG "-O0")
 set(CMAKE_CXX_FLAGS_RELEASE "-O2 -finline-limit=1000 -DNDEBUG")
@@ -54,7 +55,7 @@ include_directories(${coroutine})
 set(proto "./proto")
 include_directories(${proto})
 add_subdirectory(third-lib/coroutine)
-add_subdirectory(third-lib/glog)
+#add_subdirectory(third-lib/glog)
 #add_subdirectory(include)
 add_subdirectory(proto)
 add_subdirectory(src/net)
