--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,14 +2,14 @@ include_directories(${PROJECT_BINARY_DIR})
 set(SRCS
     main.cpp)
 add_executable(exe ${SRCS})
-target_link_libraries(exe gflags protobuf coroutine reactor11)
-set_target_properties(exe PROPERTIES COMPILE_FLAGS "-std=c++0x")
+target_link_libraries(exe protobuf protocol gflags reactor11)
+set_target_properties(exe PROPERTIES COMPILE_FLAGS "-std=c++11")
 
 set(queue
     lock_free_queue_test.cpp)
 add_executable(lock_free_queue ${queue})
 target_link_libraries(lock_free_queue lockfree11)
-set_target_properties(lock_free_queue PROPERTIES COMPILE_FLAGS "-std=c++0x")
+set_target_properties(lock_free_queue PROPERTIES COMPILE_FLAGS "-std=c++11")
 
 set(glog_src glog.cpp)
 add_executable(glog_test ${glog_src})
