[feature] add countdownlatch & add client & fix bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,9 @@ add_subdirectory(third-lib/coroutine)
 #add_subdirectory(third-lib/glog)
 #add_subdirectory(include)
 add_subdirectory(proto)
-add_subdirectory(src/net)
+add_subdirectory(src/utils)
 add_subdirectory(src/lock_free)
+add_subdirectory(src/net)
+add_subdirectory(src/client)
 add_subdirectory(test)
 
