update DEFINE_SINGTON & socket_manager

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -4,7 +4,7 @@ file(GLOB SRCS "*.cpp")
 find_package(glog 0.3.5 REQUIRED)
 
 add_library(rpcclient11 ${SRCS})
-target_link_libraries(rpcclient11 reactor11)
+target_link_libraries(rpcclient11 utils reactor11)
 set_target_properties(rpcclient11 PROPERTIES COMPILE_FLAGS "-std=c++11")
 
 install(TARGETS rpcclient11 DESTINATION lib)
