--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,26 @@
+set(CXX_FLAGS
+ -g
+ # -DVALGRIND
+ # -DMUDUO_STD_STRING
+ -DCHECK_PTHREAD_RETURN_VALUE
+ -D_FILE_OFFSET_BITS=64
+ -Wall
+ -Wextra
+ -Werror
+ # -Wconversion
+ -Wno-unused-parameter
+ #-Wold-style-cast
+ -Woverloaded-virtual
+ -Wpointer-arith
+ #-Wshadow
+ -Wwrite-strings
+ -march=native
+ # -MMD
+ # -std=c++0x
+ -rdynamic
+ )
+
+
 include_directories(${PROJECT_BINARY_DIR})
 set(SRCS
     main.cpp)
